@@ -1,6 +1,7 @@
 1.?
 ---
 * Added Lithuanian (LT) localization
+* Fixed Spanish (ES) localization (http://plugins.jquery.com/node/12696)
 * Added jQuery UI themerolled demo
 * Removed cmxform.js 
 * Fixed four missing semicolons (http://plugins.jquery.com/node/12639) 
